--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,7 @@
 }
 
 #form {
+    padding-top: 70px;
     width:80vw;
 }
 
@@ -16,6 +17,10 @@
 
 #footer i {
     color: aqua;
+}
+
+#about {
+    padding-top: 70px;
 }
 
 #about h4 {
@@ -38,4 +43,16 @@ img {
 #price {
     color: rgb(1, 175, 1);
     font-weight: bolder;
+}
+
+#home {
+    padding-top: 70px;
+}
+
+#contact {
+    padding-top: 70px;
+}
+
+#view {
+    padding-top: 80px;
 }
